# chess

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
chess/: README.md  main.cpp  pieces.cpp  pieces.hpp
chess.xcodeproj/: project.pbxproj
chess.xcodeproj/xcuserdata/sami.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.cpp
